# Rtype

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  launch.sh  launchWin.bat
Documentation/: Uml.mdj
Ressources/ConfigFile/: position lobby.txt
Ressources/ConfigFile/AssetConf/: lobby_position.cfg  pause_position.cfg  server_list_position.cfg
Ressources/ConfigFile/Level/: level1.cfg  level11.cfg  level2.cfg  level3.cfg
Ressources/ConfigFile/ServerConf/: Server.cfg
Ressources/Menus/: Samples.pptx
Ressources/Menus/Positions/res/: lobby_position.cfg  lobby_settings_position.cfg  principal_position.cfg  settings_position.cfg
Sources/Client/: Main.cpp
Sources/Client/Constants/: Constants.hpp  Sounds.hpp
Sources/Client/CoreClient/: CoreClient.cpp  CoreClient.hpp  ErrorsCoreClient.cpp  ErrorsCoreClient.hpp
Sources/Client/Entities/: AEntity.cpp  AEntity.hpp  CMakeLists.txt  ErrorsEntityClient.cpp  ErrorsEntityClient.hpp
Sources/Client/Entities/Aliens/AlienBeta/: AlienBeta.cpp  AlienBeta.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienEpsilon/: AlienEpsilon.cpp  AlienEpsilon.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienEta/: AlienEta.cpp  AlienEta.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienGamma/: AlienGamma.cpp  AlienGamma.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienMu/: AlienMu.cpp  AlienMu.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienRho/: AlienRho.cpp  AlienRho.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienTheta/: AlienTheta.cpp  AlienTheta.hpp  CMakeLists.txt
Sources/Client/Entities/Aliens/AlienXi/: AlienXi.cpp  AlienXi.hpp  CMakeLists.txt
Sources/Client/Entities/Bullets/BulletsEnemies/BulletsEnemiesMD/: BulletsEnemiesMD.cpp  BulletsEnemiesMD.hpp  CMakeLists.txt
Sources/Client/Entities/Bullets/BulletsShips/BulletsShipsBD/: BulletsShipsBD.cpp  BulletsShipsBD.hpp  CMakeLists.txt
Sources/Client/Entities/Bullets/BulletsShips/BulletsShipsMD/: BulletsShipsMD.cpp  BulletsShipsMD.hpp  CMakeLists.txt
Sources/Client/Entities/Ships/ShipBlue/: CMakeLists.txt  ShipBlue.cpp  ShipBlue.hpp
Sources/Client/LibLoader/: ErrorsLibLoader.cpp  ErrorsLibLoader.hpp  LibLoader.hpp
Sources/Client/Menus/: AMenu.cpp  AMenu.hpp
Sources/Client/SFMLHandler/: SFMLHandler.cpp  SFMLHandler.hpp
Sources/Commands/: ACommand.cpp  ACommand.hpp
Sources/Commands/CommandParser/: CommandParser.cpp  CommandParser.hpp
Sources/Commands/CommandType/: CommandType.hpp
Sources/Commands/CoreCommands/: CoreCommand.hpp
Sources/Commands/GameCommands/: GameCommands.hpp
Sources/Commands/LobbyCommands/: LobbyCommands.hpp
Sources/Errors/: Errors.cpp  Errors.hpp
Sources/ParsingConf/: AParser.cpp  AParser.hpp  ErrorAParser.cpp  ErrorAParser.hpp
Sources/ParsingConf/Asset/: AssetParser.cpp  AssetParser.hpp  ErrorAssetParser.cpp  ErrorAssetParser.hpp
Sources/ParsingConf/Level/: ErrorLevelParser.cpp  ErrorLevelParser.hpp  LevelParser.cpp  LevelParser.hpp
Sources/ParsingConf/Server/: ErrorServerParser.cpp  ErrorServerParser.hpp  ServerConfParsing.cpp  ServerConfParsing.hpp
Sources/Server/: Command.hpp  Main.cpp
Sources/Server/CoreServer/: CoreServer.cpp  CoreServer.hpp
Sources/Server/GameEngine/: GameEngine.cpp  GameEngine.hpp
Sources/Server/GameEngine/Entities/: AEntity.cpp  AEntity.hpp  CMakeLists.txt  HitBox.hpp
Sources/Server/GameEngine/Entities/Aliens/AlienAlpha/: AlienAlpha.cpp  AlienAlpha.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienBeta/: AlienBeta.cpp  AlienBeta.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienDelta/: AlienDelta.cpp  AlienDelta.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienEpsilon/: AlienEpsilon.cpp  AlienEpsilon.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienEta/: AlienEta.cpp  AlienEta.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienGamma/: AlienGamma.cpp  AlienGamma.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienGold/: AlienGold.cpp  AlienGold.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienIota/: AlienIota.cpp  AlienIota.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienKappa/: AlienKappa.cpp  AlienKappa.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienLambda/: AlienLambda.cpp  AlienLambda.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienMu/: AlienMu.cpp  AlienMu.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienNu/: AlienNu.cpp  AlienNu.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienOmicron/: AlienOmicron.cpp  AlienOmicron.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienPrincipal/: AlienPrincipal.cpp  AlienPrincipal.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienRho/: AlienRho.cpp  AlienRho.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienTheta/: AlienTheta.cpp  AlienTheta.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienXi/: AlienXi.cpp  AlienXi.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Aliens/AlienZeta/: AlienZeta.cpp  AlienZeta.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/BulletsShips/BulletsShipsSD/: BulletsShipSD.cpp  BulletsShipSD.hpp  CMakeLists.txt
Sources/Server/GameEngine/Entities/Ships/: Ship.cpp  Ship.hpp
Sources/Server/GameEngine/Entities/Ships/ShipBlue/: CMakeLists.txt  ShipBlue.cpp  ShipBlue.hpp
Sources/Server/GameEngine/Entities/Ships/ShipGreen/: CMakeLists.txt  ShipGreen.cpp  ShipGreen.hpp
Sources/Server/GameEngine/Entities/Ships/ShipRed/: CMakeLists.txt  ShipRed.cpp  ShipRed.hpp
Sources/Server/GameEngine/Entities/Ships/ShipYellow/: CMakeLists.txt  ShipYellow.cpp  ShipYellow.hpp
Sources/Server/GameInstance/: GameInstance.cpp  GameInstance.hpp  GameInstanceStatus.hpp
Sources/Server/User/: User.cpp  User.hpp
Sources/Template/SecureData/: SecureData.hpp
Sources/Template/Utils/: Utils.hpp
Sources/Template/Vector2D/: Vector2D.hpp
Sources/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
(+151 files in other folders)
