add_subdirectory(Aliens/AlienAlpha)
add_subdirectory(Aliens/AlienBeta)
add_subdirectory(Aliens/AlienDelta)
add_subdirectory(Aliens/AlienEpsilon)
add_subdirectory(Aliens/AlienEta)
add_subdirectory(Aliens/AlienGamma)
add_subdirectory(Aliens/AlienGold)
add_subdirectory(Aliens/AlienIota)
add_subdirectory(Aliens/AlienKappa)
add_subdirectory(Aliens/AlienLambda)
add_subdirectory(Aliens/AlienMu)
add_subdirectory(Aliens/AlienNu)
add_subdirectory(Aliens/AlienOmicron)
add_subdirectory(Aliens/AlienPrincipal)
add_subdirectory(Aliens/AlienRho)
add_subdirectory(Aliens/AlienTheta)
add_subdirectory(Aliens/AlienXi)
add_subdirectory(Aliens/AlienZeta)

add_subdirectory(Ships/ShipBlue)
add_subdirectory(Ships/ShipRed)
add_subdirectory(Ships/ShipYellow)
add_subdirectory(Ships/ShipGreen)

add_subdirectory(BulletsShips/BulletsShipsSD)